# DockQL

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENCY_POLICY.md  Makefile  README.md  clippy.json  clippy_output.json  install.sh  release.toml
.github/workflows/: ci.yml  pages.yml  release.yml
_brew/: dol.rb
docs/: analyze.html  analyze.md  architecture.html  architecture.md  examples.html  examples.md  index.html  pandoc-template.html  roadmap.md  rustdoc.css  spec.html  spec.md  storage.html  storage.md  tutorial.html  tutorial.md
examples/: advanced_alert_classification.dol  advanced_anomaly_detection.dol  advanced_compose_health.dol  advanced_image_analysis.dol  advanced_logs_analysis.dol  advanced_monitoring_pipeline.dol  advanced_multi_alert.dol  advanced_network_events.dol  advanced_threshold_tuning.dol  advanced_time_analysis.dol  agg_avg_cpu.dol  agg_count_having.dol  agg_median_percentile.dol  agg_sum_memory.dol  alert_high_cpu.dol  alert_restart.dol  alert_webhook.dol  analyze_anomalies.dol  analyze_correlate.dol  arithmetic_mem_gb.dol  arithmetic_mem_pct.dol  assert_pipeline.dol  between_cpu.dol  compose_config.dol  compose_config_services.dol  compose_images.dol  compose_logs_service.dol  compose_ls.dol  compose_myapp.dol  compose_myapp_alert.dol  compose_myapp_cpu.dol  compose_port.dol  compose_ps.dol  compose_services.dol  compose_stats.dol  conditional_alert.dol  container_deaths.dol  container_restarts.dol  date_diff_hours.dol  date_format_created.dol  (+66 more)
scripts/: validate_examples.sh
src/: alerts.rs  analyze.rs  ast.rs  cli.rs  collector.rs  config.rs  dashboard.rs  docker.rs  eval.rs  events.rs  executor.rs  export.rs  lib.rs  main.rs  metrics.rs  parser.rs  planner.rs  repl.rs  semantic.rs  sqlite_store.rs  storage.rs
