[package]
name = "dol"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/genc-murat/DockQL"
homepage = "https://github.com/genc-murat/DockQL"
description = "Docker Observability Language - A domain-specific language and CLI tool for querying Docker infrastructure"
license = "MIT"

[[bin]]
name = "dol"
path = "src/main.rs"

[package.metadata.docs.rs]
logo = "https://genc-murat.github.io/DockQL/logo.svg"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustyline = "15"
ratatui = "0.30"
crossterm = "0.28"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
